# mlops-for-data-science

./: .gitignore  README.md  dvc.yaml  pyproject.toml
.github/workflows/: file_name_check.yml
api/: README.md  main.py
api/data/: patients.json
dvc/: README.md
dvc/src/: prepare.py  train.py
mlfow/: 01-mlflow-basic.py  01-mlflow.py  02-mlflow-autlog.py  03-mlflow-grid-search-cv.py  04-mlflow-optuna.py  README.md
pydantic/: 0_pydantic_need.py  1_pydantic_intro.py  2_field_validator.py  3_model_validator.py  4_computed_fields.py  5_nested_models.py  6_serialization.py  README.md
