[project]
name = "mlops-for-data-science"
version = "0.1.0"
description = "MLOP's for Data Science, My Notes"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc>=3.66.1",
    "fastapi>=0.135.1",
    "matplotlib>=3.10.8",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "optuna>=4.7.0",
    "pandas>=2.3.3",
    "plotly>=6.6.0",
    "pydantic>=2.12.5",
    "pyspark==3.5.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
]
